// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Lists [CS-617] should not ignore double and triple dash in list item 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "list item – 1",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "list item — 2",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists ADFS-453 should NOT create a list of more than 20 levels of nesting when nesting different types of lists 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "********************* a",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should NOT create a list of more than 20 levels of nesting 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "********************* a",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should allow pipes in a list, and not render as a table 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "|",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "|",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should be able to create nested list with - 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "different",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            Object {
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "bullet",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "types",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should break out the media group 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "This is a media group ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-0",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": " and text after it",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should break out the media group but merge separate media groups into single media group if only separated by space 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "This is a media group ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-1",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-2",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-3",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-4",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": " and text after it ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-5",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-6",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-7",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-8",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should break out the media group even in nested list 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "nested",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            Object {
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "media group ",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": null,
            "__fileName": null,
            "__fileSize": null,
            "alt": "",
            "collection": "",
            "height": null,
            "id": "abc-0",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": null,
          },
          "type": "media",
        },
      ],
      "type": "mediaGroup",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "type": "paragraph",
            },
            Object {
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": " here",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "nice nice",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "all good",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should continue list if rule is followed by text on next line 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "a",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    Object {
      "type": "rule",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "abc",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should convert blockquotes into paragraphs 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "This is sparta",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should convert headings into paragraphs 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "marks": Array [
                    Object {
                      "type": "strong",
                    },
                  ],
                  "text": "FOO",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should convert rules into paragraphs 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    Object {
      "type": "rule",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should correctly insert a 5 dash ruler if it occurs within a list 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "a",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    Object {
      "type": "rule",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "b",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            Object {
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "c",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                    Object {
                      "content": Array [
                        Object {
                          "content": Array [
                            Object {
                              "content": Array [
                                Object {
                                  "text": "d",
                                  "type": "text",
                                },
                              ],
                              "type": "paragraph",
                            },
                          ],
                          "type": "listItem",
                        },
                      ],
                      "type": "bulletList",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    Object {
      "type": "rule",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should correctly insert a ruler if it occurs within a list 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "a",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    Object {
      "type": "rule",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "b",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            Object {
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "c",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                    Object {
                      "content": Array [
                        Object {
                          "content": Array [
                            Object {
                              "content": Array [
                                Object {
                                  "text": "d",
                                  "type": "text",
                                },
                              ],
                              "type": "paragraph",
                            },
                          ],
                          "type": "listItem",
                        },
                      ],
                      "type": "bulletList",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    Object {
      "type": "rule",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should create a list if started with multiple hash symbols 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "type": "paragraph",
            },
            Object {
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "a",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "orderedList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should create a list if started with multiple star symbols 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "type": "paragraph",
            },
            Object {
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "a",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should create list of mentions with rule in middle 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "accessLevel": "",
                    "id": "name1",
                    "text": "",
                    "userType": null,
                  },
                  "type": "mention",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "accessLevel": "",
                    "id": "name2",
                    "text": "",
                    "userType": null,
                  },
                  "type": "mention",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    Object {
      "type": "rule",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "abc",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "accessLevel": "",
                    "id": "name3",
                    "text": "",
                    "userType": null,
                  },
                  "type": "mention",
                },
              ],
              "type": "paragraph",
            },
            Object {
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "attrs": Object {
                            "accessLevel": "",
                            "id": "name4",
                            "text": "",
                            "userType": null,
                          },
                          "type": "mention",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should create single list mention 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "accessLevel": "",
                    "id": "someName",
                    "text": "",
                    "userType": null,
                  },
                  "type": "mention",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should find mixed ordered -> unordered lists 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "a",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "numbered",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            Object {
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "with",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "nested",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "bullet",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "list",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should find mixed unordered -> ordered lists 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "a",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "bulleted",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            Object {
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "with",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "nested",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "numbered",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "orderedList",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "list",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should find ordered lists 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "a",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "numbered",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "list",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should find the full content of a list item properly 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "nested",
                  "type": "text",
                },
                Object {
                  "type": "hardBreak",
                },
                Object {
                  "text": "       spaces in front of me",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should find unordered lists where items start with * 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "some",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "bullet",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            Object {
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "marks": Array [
                            Object {
                              "type": "strong",
                            },
                          ],
                          "text": "indented",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "bullets",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "points",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should find unordered lists where items start with - 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "different",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "bullet",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "types",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should find unordered lists where items start with spaces 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "different",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "bullet",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "types",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should handle lists with quad dash symbols 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "a",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            Object {
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                    Object {
                      "content": Array [
                        Object {
                          "content": Array [
                            Object {
                              "type": "paragraph",
                            },
                            Object {
                              "content": Array [
                                Object {
                                  "content": Array [
                                    Object {
                                      "content": Array [
                                        Object {
                                          "text": "b",
                                          "type": "text",
                                        },
                                      ],
                                      "type": "paragraph",
                                    },
                                  ],
                                  "type": "listItem",
                                },
                              ],
                              "type": "bulletList",
                            },
                          ],
                          "type": "listItem",
                        },
                      ],
                      "type": "bulletList",
                    },
                  ],
                  "type": "listItem",
                },
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "c",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should insert a if it is followed by an empty line 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "a",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    Object {
      "type": "rule",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should jump over empty lines in macro successfully 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "list with macro",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            Object {
              "attrs": Object {
                "language": "java",
                "uniqueId": null,
              },
              "content": Array [
                Object {
                  "text": "sadfsadf",
                  "type": "text",
                },
              ],
              "type": "codeBlock",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "list 2",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should not be a list item if it follows by a line break 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "nested",
                  "type": "text",
                },
                Object {
                  "type": "hardBreak",
                },
                Object {
                  "text": "*",
                  "type": "text",
                },
                Object {
                  "type": "hardBreak",
                },
                Object {
                  "text": "*",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should not break {color} macro to differnt lines 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "marks": Array [
                    Object {
                      "attrs": Object {
                        "color": "#205081",
                      },
                      "type": "textColor",
                    },
                  ],
                  "text": "123",
                  "type": "text",
                },
                Object {
                  "text": " ",
                  "type": "text",
                },
                Object {
                  "marks": Array [
                    Object {
                      "attrs": Object {
                        "color": "#d04437",
                      },
                      "type": "textColor",
                    },
                  ],
                  "text": "456",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should not create a list if started with multiple dashes 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "------ a",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should not fail for multiple lists 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "Steps to reproduce:",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "Type something",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "Type @",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "Type few letters",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "mention mark disappears ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
    Object {
      "content": Array [
        Object {
          "text": "Expected:",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "Mention mark doesn't disappear",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should support codeBlock in listItem now 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "item 1",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "item 2 with ",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            Object {
              "attrs": Object {
                "language": "java",
                "uniqueId": null,
              },
              "content": Array [
                Object {
                  "text": "code block",
                  "type": "text",
                },
              ],
              "type": "codeBlock",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Lists should use mediaSingle nodes 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "layout": "center",
                "width": null,
              },
              "content": Array [
                Object {
                  "attrs": Object {
                    "__contextId": null,
                    "__displayType": null,
                    "__external": false,
                    "__fileMimeType": null,
                    "__fileName": null,
                    "__fileSize": null,
                    "alt": "",
                    "collection": "",
                    "height": 183,
                    "id": "abc-attached",
                    "occurrenceKey": null,
                    "type": "file",
                    "url": null,
                    "width": 200,
                  },
                  "type": "media",
                },
              ],
              "type": "mediaSingle",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;
